--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   };
 
         // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
+        firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
 
         // Function to get device information
@@ -49,6 +49,7 @@
         // Get and save device information on page load
         window.onload = () => {
             const deviceInfo = getDeviceInfo();
+            console.log("Device Info: ", deviceInfo); // Log the device information
             saveDeviceInfo(deviceInfo);
         };
     </script>
