--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Shop</h1>
+        <h1>Welcome to My Shop2</h1>
     </header>
     <main>
         <section>
