--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 h-screen flex items-center justify-center font-sans">
+  <audio id="notification-sound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg"></audio>
+
   <div id="app" class="w-full max-w-4xl h-full flex bg-white shadow-2xl rounded-lg overflow-hidden hidden">
     <!-- User List -->
     <div class="w-1/3 bg-gray-100 p-4 overflow-y-auto border-r">
@@ -59,6 +61,8 @@
     const usersRef = db.collection('users');
     const chatsRef = db.collection('chats');
 
+    const notificationSound = document.getElementById('notification-sound');
+
     auth.onAuthStateChanged(async user => {
       if (user) {
         currentUser = user;
@@ -93,11 +97,20 @@
         if (doc.id !== currentUser.uid) {
           const data = doc.data();
           const li = document.createElement('li');
-          li.className = 'cursor-pointer hover:bg-gray-300 px-2 py-1 rounded flex items-center space-x-2 text-gray-700';
+          li.className = 'cursor-pointer hover:bg-gray-300 px-2 py-1 rounded flex items-center space-x-2 text-gray-700 relative';
           const span = document.createElement('span');
           span.textContent = data.email;
+
+          const notif = document.createElement('span');
+          notif.className = 'hidden w-2 h-2 bg-red-500 rounded-full absolute top-1 right-2';
+          notif.id = `notif-${doc.id}`;
+
           li.appendChild(span);
-          li.onclick = () => openChatWith(data);
+          li.appendChild(notif);
+          li.onclick = () => {
+            document.getElementById(`notif-${data.uid}`).classList.add('hidden');
+            openChatWith(data);
+          };
           list.appendChild(li);
         }
       });
@@ -107,6 +120,12 @@
       activeChatUser = user;
       document.getElementById('chat-with').textContent = `Chat with ${user.email}`;
       listenForMessages();
+    }
+
+    function formatTimestamp(ts) {
+      if (!ts) return '';
+      const date = ts.toDate();
+      return `${date.getHours().toString().padStart(2, '0')}:${date.getMinutes().toString().padStart(2, '0')}`;
     }
 
     function listenForMessages() {
@@ -119,13 +138,24 @@
         .orderBy('timestamp')
         .onSnapshot(snapshot => {
           messagesContainer.innerHTML = '';
+          let newMessages = false;
           snapshot.forEach(doc => {
             const msg = doc.data();
             const div = document.createElement('div');
-            div.className = `max-w-xs px-4 py-2 rounded-lg break-words ${msg.sender === currentUser.uid ? 'bg-blue-500 text-white self-end ml-auto' : 'bg-gray-300 text-black self-start mr-auto'}`;
-            div.textContent = msg.text;
+            div.className = `max-w-xs px-4 py-2 rounded-lg break-words relative ${msg.sender === currentUser.uid ? 'bg-blue-500 text-white self-end ml-auto' : 'bg-gray-300 text-black self-start mr-auto'}`;
+            div.innerHTML = `
+              <div>${msg.text}</div>
+              <div class="text-xs text-right mt-1 opacity-70">${formatTimestamp(msg.timestamp)}</div>
+            `;
             messagesContainer.appendChild(div);
+            if (msg.sender !== currentUser.uid) newMessages = true;
           });
+
+          if (newMessages) {
+            notificationSound.currentTime = 0;
+            notificationSound.play();
+          }
+
           messagesContainer.scrollTop = messagesContainer.scrollHeight;
         });
     }
